--- a/web/pom.xml
+++ b/web/pom.xml
@@ -25,6 +25,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.3.3.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version></version>
+        </dependency>
+
     </dependencies>
 
     <build>
