--- a/web/pom.xml
+++ b/web/pom.xml
@@ -33,10 +33,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version></version>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.3.3.RELEASE</version>
+            <scope>runtime</scope>
         </dependency>
-
     </dependencies>
 
     <build>
